design homepage finished

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 	<body id="kt_body" class="header-fixed header-tablet-and-mobile-fixed aside-fixed aside-secondary-disabled" >
 		<!--end::Body-->
 
-		<script type="module" src="/src/main.js"></script>
+		<script type="module" src="../src/main.js"></script>
 		<!--begin::Global Javascript Bundle(mandatory for all pages)-->
 		<script type="text/javascript" src="assets/plugins/global/plugins.bundle.js"></script>
 		<!--end::Global Javascript Bundle-->
