--- a/public/landing.html
+++ b/public/landing.html
@@ -148,7 +148,7 @@ License: For each use you must have a valid license purchased only from above li
 							</span></h1>
 							<!--end::Title-->
 							<!--begin::Action-->
-							<a href="index.html" class="btn btn-primary">Try Metronic</a>
+							<a href="../index.html" class="btn btn-primary">Try Metronic</a>
 							<!--end::Action-->
 						</div>
 						<!--end::Heading-->
