--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,33 @@
-
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
-	<!--begin::Head-->
-	<head>
-		<title>SaveYourFood</title>
-		<meta charset="utf-8" />
-		<link rel="shortcut icon" href="chiefHat.svg" />
-		<!--begin::Fonts(mandatory for all pages)-->
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700" />
-		<!--end::Fonts-->
-		<!--begin::Vendor Stylesheets(used for this page only)-->
-		<!--begin::Global Stylesheets Bundle(mandatory for all pages)-->
-		<link href="./assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
-		<link href="./assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
-		<!--end::Global Stylesheets Bundle-->
-		<script>// Frame-busting to prevent site from being loaded within a frame without permission (click-jacking) if (window.top != window.self) { window.top.location.replace(window.self.location.href); }</script>
-	</head>
-	<!--end::Head-->
-	<!--begin::Body-->
-	
-	<body id="kt_body" class="header-fixed header-tablet-and-mobile-fixed aside-fixed aside-secondary-disabled" >
-		<!--end::Body-->
+    <!--begin::Head-->
+    <head>
+        <title>SaveYourFood</title>
+        <meta charset="utf-8" />
+        <link rel="shortcut icon" href="chiefHat.svg" />
+        <!--begin::Fonts(mandatory for all pages)-->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700" />
+        <!--end::Fonts-->
+        <!--begin::Vendor Stylesheets(used for this page only)-->
+        <!--begin::Global Stylesheets Bundle(mandatory for all pages)-->
+        <link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
+        <link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
+        <!--end::Global Stylesheets Bundle-->
+        <script>
+            // Frame-busting to prevent site from being loaded within a frame without permission (click-jacking) if (window.top != window.self) { window.top.location.replace(window.self.location.href); }
+        </script>
+    </head>
+    <!--end::Head-->
+    <!--begin::Body-->
 
-		<script type="module" src="../src/main.js"></script>
-		<!--begin::Global Javascript Bundle(mandatory for all pages)-->
-		<script type="text/javascript" src="assets/plugins/global/plugins.bundle.js"></script>
-		<!--end::Global Javascript Bundle-->
+    <body id="kt_body" class="header-fixed header-tablet-and-mobile-fixed aside-fixed aside-secondary-disabled">
+        <!--end::Body-->
 
-		<!--begin::Custom Javascript(used for this page only)-->
-		<script type="text/javascript" src="./assets/js/widgets.bundle.js"></script>
-		<script type="text/javascript" src="assets/js/scripts.bundle.js"></script>
+        <!--begin::Global Javascript Bundle(mandatory for all pages)-->
+        <script type="text/javascript" src="assets/plugins/global/plugins.bundle.js"></script>
+        <!--end::Global Javascript Bundle-->
 
-	</body>
+        <!--begin::Custom Javascript(used for this page only)-->
+        <script type="text/javascript" src="assets/js/scripts.bundle.js"></script>
+    </body>
 </html>
