add preferences component

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <head>
         <title>SaveYourFood</title>
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="shortcut icon" href="chiefHat.svg" />
         <!--begin::Fonts(mandatory for all pages)-->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700" />
@@ -20,13 +21,12 @@
     <!--end::Head-->
     <!--begin::Body-->
 
-    <body id="kt_body" class="header-fixed header-tablet-and-mobile-fixed aside-fixed aside-secondary-disabled">
+    <body id="kt_body" class="header-fixed header-tablet-and-mobile-fixed aside-fixed aside-secondary-disabled min-h-100vh">
         <!--end::Body-->
 
         <!--begin::Global Javascript Bundle(mandatory for all pages)-->
         <script type="text/javascript" src="assets/plugins/global/plugins.bundle.js"></script>
         <!--end::Global Javascript Bundle-->
-
         <!--begin::Custom Javascript(used for this page only)-->
         <script type="text/javascript" src="assets/js/scripts.bundle.js"></script>
     </body>
