add myRecipes, userSettings

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
         <!--end::Fonts-->
         <!--begin::Vendor Stylesheets(used for this page only)-->
         <!--begin::Global Stylesheets Bundle(mandatory for all pages)-->
-        <link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
-        <link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
+        <link href="/assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
+        <link href="/assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
         <!--end::Global Stylesheets Bundle-->
         <script>
             // Frame-busting to prevent site from being loaded within a frame without permission (click-jacking) if (window.top != window.self) { window.top.location.replace(window.self.location.href); }
@@ -25,9 +25,9 @@
         <!--end::Body-->
 
         <!--begin::Global Javascript Bundle(mandatory for all pages)-->
-        <script type="text/javascript" src="assets/plugins/global/plugins.bundle.js"></script>
+        <script type="text/javascript" src="/assets/plugins/global/plugins.bundle.js"></script>
         <!--end::Global Javascript Bundle-->
         <!--begin::Custom Javascript(used for this page only)-->
-        <script type="text/javascript" src="assets/js/scripts.bundle.js"></script>
+        <script type="text/javascript" src="/assets/js/scripts.bundle.js"></script>
     </body>
 </html>
