update weekly meals page

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
         <!--end::Fonts-->
         <!--begin::Vendor Stylesheets(used for this page only)-->
         <!--begin::Global Stylesheets Bundle(mandatory for all pages)-->
+        <link href="/assets/plugins/custom/fullcalendar/fullcalendar.bundle.css" rel="stylesheet" type="text/css" />
         <link href="/assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
         <link href="/assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
         <!--end::Global Stylesheets Bundle-->
@@ -24,10 +25,15 @@
     <body id="kt_body" class="header-fixed header-tablet-and-mobile-fixed aside-fixed aside-secondary-disabled min-h-100vh">
         <!--end::Body-->
     </body>
-
+    <!--begin::Vendors Javascript(used for this page only)-->
+    <script src="/assets/plugins/custom/datatables/datatables.bundle.js"></script>
+    <!--end::Vendors Javascript-->
+    <!--begin::Custom Javascript(used for this page only)-->
     <!--begin::Global Javascript Bundle(mandatory for all pages)-->
     <script type="text/javascript" src="/assets/plugins/global/plugins.bundle.js"></script>
     <!--end::Global Javascript Bundle-->
     <!--begin::Custom Javascript(used for this page only)-->
     <script type="text/javascript" src="/assets/js/scripts.bundle.js"></script>
+    <script type="text/javascript" src="/assets/plugins/custom/fullcalendar/fullcalendar.bundle.js"></script>
+    <script type="text/javascript" src="/assets/js/custom/apps/calendar/calendar.js"></script>
 </html>
